syntax = "proto3";
package person;
option go_package = "./person";

message person{
    string multi_id = 1;
    string name = 2;
    string sex = 3;
    string password = 4;
    string phone  = 5;
    string major = 6;
    int32 grade = 7;
    int32 class = 8;
    int64 regist_time = 9;
    int64 update_time = 10;
    int64 login_time = 11;
    int64 last_login_time = 12;
    int32 indentity = 13;
}

//注册人物信息
message RegisterRequest{
    person person = 1;
}

message RegisterResponse{
    string message = 1;
}

//更新/删除(软删除)人物信息
message UpdateRequest{
    person person = 1;
    int32 is_deleted = 2;
}

message UpdateResponse{
    string message = 1;
}

//登录
message LoginRequest{
    string multi_id = 1;
    string password = 2;
    int32 code = 3; //验证码
    string captcha_id = 4;
}

message LoginResponse{
    string message = 1;
}



service Person{
    rpc RegisterPerson(RegisterRequest) returns (RegisterResponse) {}
    rpc UpdatePerson(UpdateRequest) returns (UpdateResponse){}
    rpc Login(LoginRequest) returns (LoginResponse){}
}

